<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activites.MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strName"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:id="@+id/txtvName" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strAccTitle"
        android:textColor="@color/colorBlack"
        android:id="@+id/txtvAccTitle" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strAccData"
        android:textColor="@color/colorBlack"
        android:id="@+id/txtvAccData" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20px" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strGyrTitle"
        android:textColor="@color/colorBlack"
        android:id="@+id/txtvGyrTitle" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strGryData"
        android:textColor="@color/colorBlack"
        android:id="@+id/txtvGyrData" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20px" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strButtonTitle"
        android:textColor="@color/colorBlack"
        android:id="@+id/txtvButtonTitle" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20px" />

    <ToggleButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/tbRecord"
        android:textOff="@string/strNotCollect"
        android:textOn="@string/strCollect" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strExportToSdCard"
        android:id="@+id/cmdExportToSdCard" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strDeleteFile"
        android:id="@+id/cmdDeleteFile" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rdbContext">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strWalking"
            android:checked="true"
            android:id="@+id/rdbWalking" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strJogging"
            android:id="@+id/rdbJogging" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strSport"
            android:id="@+id/rdbSport" />
    </RadioGroup>
</LinearLayout>
